<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.coincide.alphafitness.MainActivity">


    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="Record Workout"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txt_size_head"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ico_profile" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_head2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_head"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="DISTANCE"
                android:textSize="@dimen/txt_size_head2"

                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"

                android:gravity="center"
                android:text="DURATION"
                android:textSize="@dimen/txt_size_head2"

                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_head1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_head"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/display_distance"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/display_stopwatch"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_head1"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_distance_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/display_distance_unit"
                android:textSize="@dimen/txt_size_head3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_duration_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/display_stopwatch_unit"
                android:textSize="@dimen/txt_size_head3"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_foot"
        android:layout_below="@+id/rl_head2"
        >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_foot"
        android:layout_below="@+id/rl_head2"
        android:visibility="gone"
        >

        <org.eazegraph.lib.charts.BarChart
            xmlns:eaze="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bargraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"




            eaze:egLegendHeight="35dp"
            eaze:egShowValues="true"/>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rl_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_start"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:background="@drawable/btn_start_states"

            android:text="@string/btn_start"
            android:textColor="@android:color/white" />

        <!--<ImageView
            android:id="@+id/iv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/btn_start"/>-->
        <!--        <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">-->

        <!--<Button
            android:id="@+id/btn_start"
            style="?android:borderlessButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/btn_start_states"
            android:onClick="onSWatchStart"
            android:text="@string/btn_start"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_lap"
            style="?android:borderlessButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_reset_states"
            android:enabled="false"
            android:onClick="onSWatchLap"
            android:text="@string/btn_lap"
            android:textColor="@android:color/darker_gray" />-->
        <!--</LinearLayout>-->

    </RelativeLayout>
</RelativeLayout>
